Fixed Issue: 19974-Absence is counted in Agent Info and Personal Account even though it was not scheduled due to business rule conflict.
--HG--
branch : Release 7.2.362

--- a/Domain/Teleopti.Ccc.Domain.csproj
+++ b/Domain/Teleopti.Ccc.Domain.csproj
@@ -351,6 +351,7 @@
     <Compile Include="ResourceCalculation\SwapAndModifyServiceNew.cs" />
     <Compile Include="ResourceCalculation\SwapServiceNew.cs" />
     <Compile Include="Scheduling\AffectsSameDayAndPersonSpecification.cs" />
+    <Compile Include="Scheduling\Assignment\IValidateScheduleRange.cs" />
     <Compile Include="Scheduling\Assignment\PeriodOffsetCalculator.cs" />
     <Compile Include="Scheduling\Assignment\ProjectionIntersectingPeriodMerger.cs" />
     <Compile Include="Scheduling\Assignment\ProjectionMerger.cs" />
