--- a/Infrastructure/packages.config
+++ b/Infrastructure/packages.config
@@ -3,5 +3,5 @@
   <package id="Iesi.Collections" version="3.2.0.4000" />
   <package id="log4net" version="1.2.11" />
   <package id="NHibernate" version="3.3.1.4000" />
-  <package id="NHibernate.Envers" version="1.2.0" />
+  <package id="NHibernate.Envers" version="1.3.0" targetFramework="net35" />
 </packages>
