--- a/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.LogicTest/Teleopti.Ccc.Sdk.LogicTest.csproj
+++ b/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.LogicTest/Teleopti.Ccc.Sdk.LogicTest.csproj
@@ -159,9 +159,12 @@
     <Compile Include="CommandHandler\AddActivityCommandHandlerTest.cs" />
     <Compile Include="CommandHandler\AddDayOffCommandHandlerTest.cs" />
     <Compile Include="CommandHandler\AddOvertimeCommandHandlerTest.cs" />
+    <Compile Include="CommandHandler\AddPersonalActivityCommandHandlerTest.cs" />
     <Compile Include="CommandHandler\ApproveRequestCommandHandlerTest.cs" />
+    <Compile Include="CommandHandler\BusinessRulesForPersonalAccountUpdateTest.cs" />
     <Compile Include="CommandHandler\CancelAbsenceCommandHandlerTest.cs" />
     <Compile Include="CommandHandler\CancelOvertimeCommandHandlerTest.cs" />
+    <Compile Include="CommandHandler\CancelPersonalActivityCommandHandlerTest.cs" />
     <Compile Include="CommandHandler\ChangePersonEmploymentCommandHandlerTest.cs" />
     <Compile Include="CommandHandler\ClearMainShiftCommandHandlerTest.cs" />
     <Compile Include="CommandHandler\CreatePayrollExportCommandHandlerTest.cs" />
