--- a/Teleopti.Ccc.WinCode/packages.config
+++ b/Teleopti.Ccc.WinCode/packages.config
@@ -3,7 +3,7 @@
   <package id="Autofac" version="2.6.1.841" />
   <package id="LinFu.DynamicProxy.OfficialRelease" version="1.0.5" />
   <package id="log4net" version="2.0.0" />
-  <package id="MbCache" version="1.5" />
+  <package id="MbCache" version="1.6" targetFramework="net35" />
   <package id="Syncfusion.Chart.Win" version="10.2.76" />
   <package id="Syncfusion.Core" version="10.2.76" />
   <package id="Syncfusion.Grid.Win" version="10.2.76" />
