--- a/Domain/Teleopti.Ccc.Domain.csproj
+++ b/Domain/Teleopti.Ccc.Domain.csproj
@@ -155,6 +155,8 @@
     <Compile Include="Common\DateOnlyAsDateTimePeriod.cs" />
     <Compile Include="Common\PersonsInOrganizationProvider.cs" />
     <Compile Include="Common\ScenarioProvider.cs" />
+    <Compile Include="Forecasting\Export\ForecastExportSelection.cs" />
+    <Compile Include="Forecasting\Export\IForecastExportSelection.cs" />
     <Compile Include="Forecasting\Export\ForecastToFileCommand.cs" />
     <Compile Include="Forecasting\Export\IJobResultFeedback.cs" />
     <Compile Include="Forecasting\Export\ImportForecastToSkillCommand.cs" />
