Fixed the setting to be saved in the Request Filter
--HG--
branch : Release 7.2.362

--- a/Teleopti.Ccc.WinCode/Teleopti.Ccc.WinCode.csproj
+++ b/Teleopti.Ccc.WinCode/Teleopti.Ccc.WinCode.csproj
@@ -335,6 +335,7 @@
     <Compile Include="Common\PropertyPageAndWizard\AbstractWizardPagesNoRoot.cs" />
     <Compile Include="Common\PropertyPageAndWizard\IAbstractPropertyPagesNoRoot.cs" />
     <Compile Include="Common\PropertyPageAndWizard\IPropertyPageNoRoot.cs" />
+    <Compile Include="Common\RequestPreferencesPersonalSettings.cs" />
     <Compile Include="Forecasting\CopyToSkillCommand.cs" />
     <Compile Include="Forecasting\CopyToSkillModel.cs" />
     <Compile Include="Forecasting\CopyToSkillPresenter.cs" />
