--- a/DomainTest/Teleopti.Ccc.DomainTest.csproj
+++ b/DomainTest/Teleopti.Ccc.DomainTest.csproj
@@ -159,6 +159,7 @@
     <Compile Include="Common\DateOnlyAsDateTimePeriodTest.cs" />
     <Compile Include="Common\PersonsInOrganizationProviderTest.cs" />
     <Compile Include="Common\ScenarioProviderTest.cs" />
+    <Compile Include="Forecasting\DaylightSavingTimeHelperTest.cs" />
     <Compile Include="Forecasting\Export\ImportForecastToSkillCommandTest.cs" />
     <Compile Include="Forecasting\Export\MultisiteForecastToSkillCommandTest.cs" />
     <Compile Include="Forecasting\Export\OpenAndSplitSkillCommandTest.cs" />
