Bug #20062 - Interval time in report selection was not localized
--HG--
branch : Release 7.2.362

--- a/Teleopti.Analytics/WebPortal/Teleopti.Analytics.Portal/Teleopti.Analytics.Parameter/Teleopti.Analytics.Parameters.csproj
+++ b/Teleopti.Analytics/WebPortal/Teleopti.Analytics.Portal/Teleopti.Analytics.Parameter/Teleopti.Analytics.Parameters.csproj
@@ -135,6 +135,7 @@
     <Compile Include="AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="ParameterTime.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="ParameterListBoxOptional.cs" />
     <Compile Include="ParameterBase.cs">
