--- a/Domain/Teleopti.Ccc.Domain.csproj
+++ b/Domain/Teleopti.Ccc.Domain.csproj
@@ -644,6 +644,7 @@
     <Compile Include="Scheduling\Restrictions\EffectiveRestrictionCreator.cs" />
     <Compile Include="Scheduling\Restrictions\EffectiveRestrictionForDisplayCreator.cs" />
     <Compile Include="Scheduling\Restrictions\EffectiveRestrictionOptions.cs" />
+    <Compile Include="Scheduling\Restrictions\ExtendedPreferencePredicate.cs" />
     <Compile Include="Scheduling\Restrictions\PreferenceAbsenceChecker.cs" />
     <Compile Include="Scheduling\Restrictions\ScheduleDayAvailabilityRestrictionExtractor.cs" />
     <Compile Include="Scheduling\Restrictions\ScheduleDayPreferenceRestrictionExtractor.cs" />
