--- a/DomainTest/Teleopti.Ccc.DomainTest.csproj
+++ b/DomainTest/Teleopti.Ccc.DomainTest.csproj
@@ -580,6 +580,7 @@
     <Compile Include="Scheduling\Restrictions\EffectiveRestrictionCreatorTest.cs" />
     <Compile Include="Scheduling\Restrictions\EffectiveRestrictionForDisplayCreatorTest.cs" />
     <Compile Include="Scheduling\Restrictions\EffectiveRestrictionTest.cs" />
+    <Compile Include="Scheduling\Restrictions\ExtendedPreferencePredicateTest.cs" />
     <Compile Include="Scheduling\Restrictions\PreferenceAbsenceCheckerTest.cs" />
     <Compile Include="Scheduling\Restrictions\ScheduleDayAvailabilityRestrictionExtractorTest.cs" />
     <Compile Include="Scheduling\Restrictions\ScheduleDayPreferenceRestrictionExtractorTest.cs" />
