--- a/Domain/Teleopti.Ccc.Domain.csproj
+++ b/Domain/Teleopti.Ccc.Domain.csproj
@@ -230,6 +230,7 @@
     <Compile Include="Optimization\DaysOffPreferencesPersonalSettings.cs" />
     <Compile Include="Optimization\ExtraPreferencesPersonalSettings.cs" />
     <Compile Include="Optimization\GeneralPreferencesPersonalSettings.cs" />
+    <Compile Include="Optimization\GroupDayOffOptimizerValidateDayOffToAdd.cs" />
     <Compile Include="Optimization\GroupDayOffOptimizerValidateDayOffToRemove.cs" />
     <Compile Include="Optimization\GroupOptimizationValidatorRunner.cs" />
     <Compile Include="Optimization\GroupPersonBuilderForOptimization.cs" />
