making the validators run async

--- a/DomainTest/Teleopti.Ccc.DomainTest.csproj
+++ b/DomainTest/Teleopti.Ccc.DomainTest.csproj
@@ -223,6 +223,8 @@
     </Compile>
     <Compile Include="Optimization\GroupDayOffOptimizerContainerTest.cs" />
     <Compile Include="Optimization\GroupDayOffOptimizerCreatorTest.cs" />
+    <Compile Include="Optimization\GroupDayOffOptimizerValidateDayOffToAddTest.cs" />
+    <Compile Include="Optimization\GroupDayOffOptimizerValidateDayOffToRemoveTest.cs" />
     <Compile Include="Optimization\GroupDayOffSingleOptimizerTest.cs" />
     <Compile Include="Optimization\DailyBoostedSkillForecastAndScheduledValueCalculatorTest.cs" />
     <Compile Include="Optimization\DayOffOptimizerConflictHandlerTest.cs" />
@@ -230,6 +232,8 @@
     <Compile Include="Optimization\GroupDayOffOptimizerTest.cs" />
     <Compile Include="Optimization\GroupMatrixContainerCreatorTest.cs" />
     <Compile Include="Optimization\GroupMatrixHelperTest.cs" />
+    <Compile Include="Optimization\GroupOptimizationValidatorRunnerTest.cs" />
+    <Compile Include="Optimization\GroupPersonBuilderForOptimizationTest.cs" />
     <Compile Include="Optimization\GroupPersonPreOptimizationCheckerTest.cs" />
     <Compile Include="Optimization\GroupPersonSameDayOffsCheckerTest.cs" />
     <Compile Include="Optimization\GroupPersonSameForPersonOnDateCheckerTest.cs" />
