--- a/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.ServiceBus/Teleopti.Ccc.Sdk.ServiceBus.csproj
+++ b/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.ServiceBus/Teleopti.Ccc.Sdk.ServiceBus.csproj
@@ -159,9 +159,11 @@
     <Compile Include="DateOnlyPeriodSerializer.cs" />
     <Compile Include="DenormalizeBusBootStrapper.cs" />
     <Compile Include="Denormalizer\SmsReadModelHandler.cs" />
+    <Compile Include="Denormalizer\SMS\ISmsSender.cs" />
     <Compile Include="Denormalizer\SMS\SignificantChangeChecker.cs" />
     <Compile Include="Denormalizer\SMS\SmsLinkChecker.cs" />
-    <Compile Include="Denormalizer\SMS\SmsSender.cs" />
+    <Compile Include="Denormalizer\SMS\ClickatellSmsSender.cs" />
+    <Compile Include="Denormalizer\SMS\SmsSenderFactory.cs" />
     <Compile Include="Denormalizer\UpdateGroupingReadModelDataConsumer.cs" />
     <Compile Include="Denormalizer\UpdateGroupingReadModelGroupPageConsumer.cs" />
     <Compile Include="Denormalizer\DenormalizeScheduleProjectionConsumer.cs" />
