--- a/Win/Teleopti.Ccc.Win.csproj
+++ b/Win/Teleopti.Ccc.Win.csproj
@@ -315,6 +315,12 @@
     <Compile Include="Budgeting\EditShrinkageForm.Designer.cs">
       <DependentUpon>EditShrinkageForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Common\Configuration\SmsSettingsControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Common\Configuration\SmsSettingsControl.Designer.cs">
+      <DependentUpon>SmsSettingsControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Common\ExternalExceptionHandler.cs" />
     <Compile Include="Common\Configuration\AuditingPage.cs">
       <SubType>UserControl</SubType>
@@ -2414,6 +2420,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Common\Configuration\AuditingPage.resx">
       <DependentUpon>AuditingPage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Common\Configuration\SmsSettingsControl.resx">
+      <DependentUpon>SmsSettingsControl.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Common\Configuration\ScheduleTagControl.resx">
       <DependentUpon>ScheduleTagControl.cs</DependentUpon>
