--- a/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.ServiceBus/Teleopti.Ccc.Sdk.ServiceBus.csproj
+++ b/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.ServiceBus/Teleopti.Ccc.Sdk.ServiceBus.csproj
@@ -159,11 +159,12 @@
     <Compile Include="DateOnlyPeriodSerializer.cs" />
     <Compile Include="DenormalizeBusBootStrapper.cs" />
     <Compile Include="Denormalizer\SmsReadModelHandler.cs" />
-    <Compile Include="Denormalizer\SMS\ISmsSender.cs" />
-    <Compile Include="Denormalizer\SMS\SignificantChangeChecker.cs" />
-    <Compile Include="Denormalizer\SMS\SmsLinkChecker.cs" />
-    <Compile Include="Denormalizer\SMS\ClickatellSmsSender.cs" />
-    <Compile Include="Denormalizer\SMS\SmsSenderFactory.cs" />
+    <Compile Include="SMS\ISmsSender.cs" />
+    <Compile Include="SMS\SignificantChangeChecker.cs" />
+    <Compile Include="SMS\SmsConfigReader.cs" />
+    <Compile Include="SMS\SmsLinkChecker.cs" />
+    <Compile Include="SMS\ClickatellSmsSender.cs" />
+    <Compile Include="SMS\SmsSenderFactory.cs" />
     <Compile Include="Denormalizer\UpdateGroupingReadModelDataConsumer.cs" />
     <Compile Include="Denormalizer\UpdateGroupingReadModelGroupPageConsumer.cs" />
     <Compile Include="Denormalizer\DenormalizeScheduleProjectionConsumer.cs" />
@@ -258,6 +259,9 @@
     </None>
     <None Include="packages.config">
       <SubType>Designer</SubType>
+    </None>
+    <None Include="SmsConfig.xml.notinuse">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
   <ItemGroup>
